tests/bad/var_redef.ae
/// fail: Variable is already defined in scope

def main() {
    let x = 0
    let x = 7
}